Ensure logo fits on narrower width screens.

--- a/css/index.css
+++ b/css/index.css
@@ -3472,8 +3472,24 @@ div#logo {
     position: relative;
     right: 0;
     left: 0;
-    margin-top: 5px;
-    max-height: 50px;
+    margin: 0 auto;
+    max-height: 60px;
+}
+
+@media (max-width: 380px) {
+    div#logo {
+        height: 43px;
+        width: 100%;
+        text-align: center;
+    }
+    #logo img
+    {
+        position: relative;
+        right: 0;
+        left: 0;
+        margin-top: 11px;
+        max-height: 43px;
+    }
 }
 
 @media (max-width: 320px) {
